# mastermindgame

./: .coverage  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Python_vs_Java_Tooling.md  Quality_Testing_CICD_Policy.md  README.md  environment.yml  pyproject.toml
.github/workflows/: CONTRIBUTING.md  ci.yml
docs/: Agile Metric Notebook.ipynb
reports/html/: coverage_html_build.txt  index.html  interrogate.txt  kpi.json  mypy.txt  pytest.txt  radon_cc.txt  radon_raw.txt
src/mastermind/: __init__.py  cli.py  engine.py  game.py  scoreboard.py
src/mastermind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mastermind/gui/: __init__.py  app.py  utils.py
src/mastermind/gui/screens/: __init__.py  gameboard.py  gameover.py  highscores.py  secret.py  start.py
src/mastermind/gui/widgets/: __init__.py  colorpicker.py  row.py
tests/: test_cli.py  test_engine.py  test_game.py  test_gui_utils.py  test_scoreboard.py
tools/: kpi_report.py
